Update index.html contnet

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
         <h2>Featured Content 1</h2>
         <div class="embed-container">
             <!-- Content will be loaded here -->
-            <iframe src="https://mein.toubiz.de/api/v1/article/c9271e27-be47-4c4f-aa22-71d333be850d/mainImage?format=image/jpeg&width=1900" frameborder="0" allowfullscreen></iframe>
+            <iframe src="blob:https://www.youtube.com/6c60129e-da90-42e2-80dc-efc4f8c507d7" frameborder="0" allowfullscreen></iframe>
         </div>
         <p>Description for Featured Content 1.</p>
     </div>
