--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
         <h2>Featured Content 1</h2>
         <div class="embed-container">
             <!-- Content will be loaded here -->
-            <iframe src="blob:https://www.youtube.com/6c60129e-da90-42e2-80dc-efc4f8c507d7" frameborder="0" allowfullscreen></iframe>
+            <iframe src="https://www.youtube.com/6c60129e-da90-42e2-80dc-efc4f8c507d7" frameborder="0" allowfullscreen></iframe>
         </div>
         <p>Description for Featured Content 1.</p>
     </div>
