--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
         <h2>Featured Content 1</h2>
         <div class="embed-container">
             <!-- Content will be loaded here -->
-            <iframe src="https://www.youtube.com/embed/5iGFIloRJrI?si=xqTuAxxhxv9_QWdC?autoplay=1" frameborder="0" allowfullscreen></iframe>
+            <iframe src="https://www.youtube.com/embed/5iGFIloRJrI?si=xqTuAxxhxv9_QWdC/?autoplay=1" frameborder="0" allowfullscreen></iframe>
         </div>
         <p>Description for Featured Content 1.</p>
     </div>
@@ -88,7 +88,7 @@
         <h2>Featured Content 2</h2>
         <div class="embed-container">
             <!-- Content will be loaded here -->
-            <iframe src="https://www.youtube.com/embed/NByl73N2Q14?si=hApOBZyPkaR0rKYR?autoplay=1" frameborder="0" allowfullscreen></iframe>
+            <iframe src="https://www.youtube.com/embed/NByl73N2Q14?si=hApOBZyPkaR0rKYR/?autoplay=1" frameborder="0" allowfullscreen></iframe>
         </div>
         <p>Description for Featured Content 2.</p>
     </div>
