--- a/index.html
+++ b/index.html
@@ -75,22 +75,22 @@
 
     <!-- First Featured Content -->
     <div class="content-section">
-        <h2>Featured Content 1</h2>
+        <h2>Blieskastel - Saarland</h2>
         <div class="embed-container">
             <!-- Content will be loaded here -->
-            <iframe src="https://www.youtube.com/embed/5iGFIloRJrI?si=xqTuAxxhxv9_QWdC/?autoplay=1" frameborder="0" allowfullscreen></iframe>
+            <iframe src="https://www.youtube.com/embed/5iGFIloRJrI?si=xqTuAxxhxv9_QWdC?autoplay=1" frameborder="0" allowfullscreen></iframe>
         </div>
-        <p>Description for Featured Content 1.</p>
+        <p>Travel Tour Germany. Heute in Blieskastel</p>
     </div>
 
     <!-- Second Featured Content -->
     <div class="content-section">
-        <h2>Featured Content 2</h2>
+        <h2>Supermoto Rideout Belgium</h2>
         <div class="embed-container">
             <!-- Content will be loaded here -->
-            <iframe src="https://www.youtube.com/embed/NByl73N2Q14?si=hApOBZyPkaR0rKYR/?autoplay=1" frameborder="0" allowfullscreen></iframe>
+            <iframe src="https://www.youtube.com/embed/NByl73N2Q14?si=hApOBZyPkaR0rKYR?autoplay=1" frameborder="0" allowfullscreen></iframe>
         </div>
-        <p>Description for Featured Content 2.</p>
+        <p>Eyestreaming on my way to School.</p>
     </div>
 
     <!-- Add more content sections as needed -->
