--- a/index.html
+++ b/index.html
@@ -93,8 +93,21 @@
         <p>Eyestreaming on my way to School.</p>
     </div>
 
-    <!-- Add more content sections as needed -->
+    
 
+    <!-- Add more content sections as needed -->
+    <div class="content-section">
+        <h2>Featured Content</h2>
+        <div class="embed-container" id="contentContainer">
+            <!-- Content will be loaded here -->
+            <video controls width="100%" height="100%">
+                <source src="videoplayback - Trim.mp4" type="video/mp4">
+                Your browser does not support the video tag.
+            </video>
+        </div>
+        <p>Description for Featured Content.</p>
+    </div>
+    
     <footer>
         <p>&copy; 2024 Eyestream - All Rights Reserved</p>
     </footer>
