--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
         <h2>Featured Content</h2>
         <div class="embed-container" id="contentContainer">
             <!-- Content will be loaded here -->
-            <video controls width="100%" height="100%">
+            <video width="100%" height="100%" controls>
                 <source src="/content/content3.mp4" type="video/mp4">
                 Your browser does not support the video tag.
             </video>
