--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         }
 
         header {
-            background-color: #0047AB;
+            background-color: #6495ED;
             padding: 15px;
             text-align: center;
             color: #fff;
