--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
         <div class="embed-container" id="contentContainer">
             <!-- Content will be loaded here -->
             <video width="100%" height="100%" controls>
-                <source src="content/content2.mp4" type="video/mp4">
+                <source src="/content/content2.mp4" type="video/mp4">
                 Your browser does not support the video tag.
             </video>
         </div>
