--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         }
 
         header {
-            background-color: #6495ED;
+            background-color: #ff1b2d;
             padding: 15px;
             text-align: center;
             color: #fff;
@@ -57,7 +57,7 @@
         }
 
         footer {
-            background-color: #6441a5;
+            background-color: #ff1b2d;
             padding: var(--footer-height) 15px;
             text-align: center;
             color: #fff;
