--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Eyestream - Your Streaming Platform</title>
+    <title>Eyestream - Deine Ultimative Streamingplatform</title>
     <style>
         :root {
             --footer-height: 15px; /* Adjust this variable to change the footer height */
@@ -70,7 +70,7 @@
 <body>
     <header>
         <h1>Eyestream</h1>
-        <p>Your Ultimate Streaming Platform</p>
+        <p>Deine Ultimative Streamingplatform</p>
     </header>
 
     <!-- First Featured Content -->
@@ -109,7 +109,7 @@
     </div>
     
     <footer>
-        <p>&copy; 2024 Eyestream - All Rights Reserved</p>
+        <p>&copy; 2024 Eyestream - Alle Rechte vorbehalten</p>
     </footer>
 </body>
 </html>
