--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         }
 
         header {
-            background-color: #C82300;
+            background-color: #961A00;
             padding: 15px;
             text-align: center;
             color: #fff;
@@ -57,7 +57,7 @@
         }
 
         footer {
-            background-color: #C82300;
+            background-color: #961A00;
             padding: var(--footer-height) 15px;
             text-align: center;
             color: #fff;
