--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
         <h2>Featured Content</h2>
         <div class="embed-container" id="contentContainer">
             <!-- Content will be loaded here -->
-            <video width="100%" height="100%" controls autoplay>
+            <video width="1000" height="700" controls autoplay>
                 <source src="../content/content2.mp4" type="video/mp4">
                 Your browser does not support the video tag.
             </video>
