--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
         <h2>Featured Content</h2>
         <div class="embed-container" id="contentContainer">
             <!-- Content will be loaded here -->
-            <video autoplay width="768" height="576" autoplay>
+            <video controls width="768" height="576" autoplay>
                 <source src="content/content2.mp4" type="video/mp4">
                 Your browser does not support the video tag.
             </video>
