--- a/index.html
+++ b/index.html
@@ -99,11 +99,14 @@
     <div class="content-section">
         <h2>Featured Content</h2>
         <div class="embed-container" id="contentContainer">
+            
+             <a href="chat.html?username=JohnDoe">
             <!-- Content will be loaded here -->
             <video autoplay muted width="768" height="576" >
                 <source src="content/content2.mp4" type="video/mp4">
                 Your browser does not support the video tag.
             </video>
+             </a>
         </div>
         <p>Description for Featured Content.</p>
     </div>
