--- a/chat.html
+++ b/chat.html
@@ -10,11 +10,11 @@
             font-family: 'Arial', sans-serif;
             margin: 0;
             padding: 0;
-            background-color: #f9f9f9;
+            background-color: #0e0e10;
         }
 
         header {
-            background-color: #fff;
+            background-color: #961A00;
             padding: 10px;
             text-align: center;
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
@@ -23,7 +23,7 @@
         .chat-section {
             max-width: 800px;
             margin: 20px auto;
-            background-color: #fff;
+            background-color: #0e0e10;
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
             padding: 20px;
             border-radius: 8px;
@@ -47,7 +47,7 @@
 
         button {
             padding: 8px;
-            background-color: #4caf50;
+            background-color: #961A00;
             color: #fff;
             border: none;
             cursor: pointer;
