--- a/chat.html
+++ b/chat.html
@@ -32,7 +32,7 @@
         #chat-messages {
             max-height: 300px;
             overflow-y: auto;
-            border-bottom: 1px solid #ddd;
+            border-bottom: 1px solid #fff;
             margin-bottom: 10px;
         }
 
