--- a/chat.html
+++ b/chat.html
@@ -10,11 +10,11 @@
             font-family: 'Arial', sans-serif;
             margin: 0;
             padding: 0;
-            background-color: #0e0e10;
+            background-color: #f9f9f9;
         }
 
         header {
-            background-color: #961A00;
+            background-color: #fff;
             padding: 10px;
             text-align: center;
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
@@ -23,21 +23,26 @@
         .chat-section {
             max-width: 800px;
             margin: 20px auto;
-            background-color: #0e0e10;
+            background-color: #fff;
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
             padding: 20px;
             border-radius: 8px;
+            display: flex;
+            flex-direction: column;
+            align-items: flex-end; /* Align chat messages to the right */
         }
 
         #chat-messages {
             max-height: 300px;
             overflow-y: auto;
-            border-bottom: 1px solid #fff;
+            border-bottom: 1px solid #ddd;
             margin-bottom: 10px;
+            width: 100%;
         }
 
         .chat-input {
             display: flex;
+            width: 100%;
         }
 
         input {
@@ -47,7 +52,7 @@
 
         button {
             padding: 8px;
-            background-color: #961A00;
+            background-color: #4caf50;
             color: #fff;
             border: none;
             cursor: pointer;
