--- a/chat.html
+++ b/chat.html
@@ -10,52 +10,84 @@
             font-family: 'Arial', sans-serif;
             margin: 0;
             padding: 0;
-            background-color: #fff;
+            background-color: #0e0e10;
+            color: #afafaf;
         }
 
         header {
             background-color: #961A00;
-            padding: 10px;
+            padding: 30px;
             text-align: center;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+            box-shadow: 0 0 15px rgba(0, 0, 0, 0.1);
+        }
+
+        .content-section {
+            max-width: 1200px;
+            margin: 30px auto;
+            background-color: #961A00;
+            box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
+            padding: 30px;
+            border-radius: 20px;
+            display: flex;
+            flex-direction: row;
+            justify-content: space-between;
+        }
+
+        #featured-video {
+            width: 65%;
+            max-width: 800px;
+            height: auto;
+            margin-right: 30px;
         }
 
         .chat-section {
-            max-width: 800px;
-            margin: 20px auto;
-            background-color: #0e0e30;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-            padding: 20px;
-            border-radius: 8px;
+            width: 30%;
+            background-color: #111111;
+            box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
+            padding: 30px;
+            border-radius: 20px;
             display: flex;
             flex-direction: column;
-            align-items: flex-end; /* Align chat messages to the right */
+            align-items: flex-end;
         }
 
         #chat-messages {
-            max-height: 300px;
+            max-height: 400px;
             overflow-y: auto;
-            border-bottom: 1px solid #fff;
-            margin-bottom: 10px;
+            border-bottom: 1px solid #ddd;
+            margin-bottom: 30px;
             width: 100%;
         }
 
         .chat-input {
             display: flex;
+            flex-direction: column;
+            align-items: flex-end;
             width: 100%;
         }
 
         input {
-            flex: 1;
-            padding: 8px;
+            width: calc(100% - 20px);
+            padding: 15px;
+            margin-bottom: 15px;
+            font-size: 16px;
         }
 
         button {
-            padding: 8px;
-            background-color: #0e0e10;
+            padding: 15px;
+            background-color: #c94040;
             color: #fff;
             border: none;
             cursor: pointer;
+            font-size: 16px;
+        }
+
+        footer {
+            text-align: center;
+            padding: 30px;
+            background-color: #961A00;
+            box-shadow: 0 0 15px rgba(0, 0, 0, 0.1);
+            border-radius: 20px;
         }
     </style>
 </head>
@@ -64,11 +96,25 @@
         <h1>Eyestream Chat</h1>
     </header>
 
-    <div class="chat-section">
-        <div id="chat-messages"></div>
-        <div class="chat-input">
-            <input type="text" id="message-input" placeholder="Type your message...">
-            <button onclick="sendMessage()">Send</button>
+    <div class="content-section">
+        <!-- Featured Content Section -->
+        <div id="featured-video">
+            <!-- Replace 'your-video-id' with the actual YouTube video ID -->
+           <video autoplay muted width="768" height="576" >
+                <source src="content/content2.mp4" type="video/mp4">
+                Your browser does not support the video tag.
+            </video>
+        </div>
+
+        <!-- Chat Section -->
+        <div class="chat-section">
+            <div id="chat-messages"></div>
+            <div class="chat-input">
+                <!-- Predefined username -->
+                <input type="hidden" id="username-input" value="YourUsername">
+                <input type="text" id="message-input" placeholder="Type your message...">
+                <button onclick="sendMessage()">Send</button>
+            </div>
         </div>
     </div>
 
@@ -77,15 +123,23 @@
     </footer>
 
     <script>
+        const messageInput = document.getElementById('message-input');
+
+        messageInput.addEventListener('keyup', function (event) {
+            if (event.key === 'Enter') {
+                sendMessage();
+            }
+        });
+
         function sendMessage() {
-            const messageInput = document.getElementById('message-input');
+            const usernameInput = document.getElementById('username-input');
             const message = messageInput.value;
 
             if (message.trim() !== '') {
                 const chatMessages = document.getElementById('chat-messages');
                 const messageElement = document.createElement('div');
                 messageElement.className = 'chat-message';
-                messageElement.textContent = message;
+                messageElement.textContent = `${usernameInput.value}: ${message}`;
                 chatMessages.appendChild(messageElement);
 
                 // Clear the input field after sending the message
@@ -95,4 +149,3 @@
     </script>
 </body>
 </html>
-
