--- a/chat.html
+++ b/chat.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Eyestream - Chat</title>
+    <title>Eyestream - JohnDoe</title>
 
     <style>
         body {
