--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
             
              <a href="chat.html?username=JohnDoe">
             <!-- Content will be loaded here -->
-            <video autoplay muted width="768" height="576" >
+            <video autoplay muted width="100%" height="100%" >
                 <source src="content/content2.mp4" type="video/mp4">
                 Your browser does not support the video tag.
             </video>
