--- a/chat.html
+++ b/chat.html
@@ -111,7 +111,7 @@
             <div id="chat-messages"></div>
             <div class="chat-input">
                 <!-- Predefined username -->
-                <input type="hidden" id="username-input" value="YourUsername">
+                <input type="hidden" id="username-input" value="DepressiverHuan">
                 <input type="text" id="message-input" placeholder="Type your message...">
                 <button onclick="sendMessage()">Send</button>
             </div>
