--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
         <h2>Deutschland Tour</h2>
         <div class="embed-container" id="contentContainer">
             
-             <a href="chat.html?username=Frida">
+             <a href="chat2.html?username=Frida">
             <!-- Content will be loaded here -->
             <video autoplay muted width="1600" height="900" >
                 <source src="content/content1.mp4" type="video/mp4">
