--- a/index.html
+++ b/index.html
@@ -77,8 +77,10 @@
     <div class="content-section">
         <h2>Blieskastel - Saarland</h2>
         <div class="embed-container">
-            <!-- Content will be loaded here -->
-            <iframe src="https://www.youtube.com/embed/5iGFIloRJrI?si=xqTuAxxhxv9_QWdC?autoplay=1" frameborder="0" allowfullscreen></iframe>
+           <div id="featured-video">
+            <!-- Replace 'your-video-id' with the actual YouTube video ID -->
+            <iframe width="720" height="480" src="https://10.129.207.152:8080/video" frameborder="0" allowfullscreen></iframe>
+        </div>
         </div>
         <p>Travel Tour Germany. Heute in Blieskastel</p>
     </div>
