--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
     <div class="content-section">
         <h2>Blieskastel - Saarland</h2>
         <div class="embed-container">
-            <a href="chat2.html?username=Frida">
+            <a href="chat3.html?username=DepressiverHuan">
            <div id="featured-video">
             <!-- Replace 'your-video-id' with the actual YouTube video ID -->
             <iframe width="720" height="480" src="https://10.129.207.152:8080/video" frameborder="0" allowfullscreen></iframe>
