--- a/chat3.html
+++ b/chat3.html
@@ -96,15 +96,19 @@
         <h1>Eyestream Chat</h1>
     </header>
 
-    <div class="content-section">
-        <!-- Featured Content Section -->
-        <div id="featured-video">
+<div class="content-section">
+        <h2>Eyestream Als Roter KLN</h2>
+        <div class="embed-container">
+            <a href="chat3.html?username=DepressiverHuan">
+           <div id="featured-video">
             <!-- Replace 'your-video-id' with the actual YouTube video ID -->
-            <video autoplay muted width="768" height="576" >
-                <source src="content/content1.mp4" type="video/mp4">
-                Your browser does not support the video tag.
-            </video>
+            <iframe width="720" height="480" src="https://10.129.207.152:8080/video" frameborder="0" allowfullscreen></iframe>
         </div>
+            </a>
+        </div>
+        <p>Bin grad in der Schule</p>
+    </div>
+
 
         <!-- Chat Section -->
         <div class="chat-section">
