--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 
     <!-- First Featured Content -->
     <div class="content-section">
-        <h2>Blieskastel - Saarland</h2>
+        <h2>Eyestream als Roter KLN</h2>
         <div class="embed-container">
             <a href="chat3.html?username=DepressiverHuan">
            <div id="featured-video">
@@ -84,7 +84,7 @@
         </div>
             </a>
         </div>
-        <p>Travel Tour Germany. Heute in Blieskastel</p>
+        <p>Bin grad in der Schule</p>
     </div>
 
     <div class="content-section">
