--- a/chat3.html
+++ b/chat3.html
@@ -96,13 +96,14 @@
         <h1>Eyestream Chat</h1>
     </header>
 
-<div class="content-section">
-        <h2>Eyestream Als Roter KLN</h2>
+    <!-- First Featured Content -->
+    <div class="content-section">
+        <h2>Eyestream als Roter KLN</h2>
         <div class="embed-container">
             <a href="chat3.html?username=DepressiverHuan">
            <div id="featured-video">
             <!-- Replace 'your-video-id' with the actual YouTube video ID -->
-            <iframe width="720" height="480" src="https://10.129.207.152:8080/video" frameborder="0" allowfullscreen></iframe>
+            <iframe width="720" height="480" src="https://10.129.207.152:8080" frameborder="0" allowfullscreen></iframe>
         </div>
             </a>
         </div>
