--- a/chat3.html
+++ b/chat3.html
@@ -154,7 +154,7 @@
             const chatMessages = document.getElementById('chat-messages');
             const botMessage = document.createElement('div');
             botMessage.className = 'chat-message';
-            botMessage.textContent = 'Papalatte: Alter!!!';
+            botMessage.textContent = 'Papalatte: Warum in Schule?';
             chatMessages.appendChild(botMessage);
 
             // Remove the bot message after 5 seconds
@@ -167,7 +167,7 @@
             const chatMessages = document.getElementById('chat-messages');
             const botMessage = document.createElement('div');
             botMessage.className = 'chat-message';
-            botMessage.textContent = 'DavidBost: Was geht den da ab?';
+            botMessage.textContent = 'DavidBost: Welches Fach?';
             chatMessages.appendChild(botMessage);
 
         }, 150000);
@@ -176,7 +176,7 @@
             const chatMessages = document.getElementById('chat-messages');
             const botMessage = document.createElement('div');
             botMessage.className = 'chat-message';
-            botMessage.textContent = 'Papalatte: Ich hasse Belgien';
+            botMessage.textContent = 'Papalatte: Wo ist das???';
             chatMessages.appendChild(botMessage);
 
         }, 250000);
